@@ -227,9 +227,13 @@ Same as L<Chess::Plisco/knights>.
 
 Same as L<Chess::Plisco/pawns>.
 
+=item B<cp_pos_turn(POS)>
+
+Same as L<Chess::Plisco/turn>.
+
 =item B<cp_pos_to_move(POS)>
 
-Same as L<Chess::Plisco/toMove>.
+Same as L<Chess::Plisco/turn>.
 
 =item B<cp_pos_castling_rights(POS)>
 
